--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.11.4
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
